# file_indexing

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
testing/: file.txt  test.txt  test2.txt
