[package]
name = "file_indexing"
version = "0.2.1"
authors = ["rifqideveloper zombititi@gmail.com"]
edition = "2018"
license = "MIT"
description = "library for editing file fast and memory efficient"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

